# shop_list

./: .test-env  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  run.sh
migrations/: env.py
migrations/versions/: 530d6dc16381_create_user_model.py  f5ace1b768ac_create_shop_list_and_items.py
shop_list/: main.py
shop_list/api/: deps.py
shop_list/api/api_v1/: api.py
shop_list/api/api_v1/endpoints/: login.py  users.py
shop_list/asgi/: __init__.py
shop_list/core/: config.py  security.py
shop_list/crud/: base.py  crud_user.py
shop_list/db/: base.py  base_class.py  session.py
shop_list/models/: __init__.py  items.py  shop_list.py  user.py
shop_list/schemas/: items.py  user.py
tests/: conftest.py  test_app.py
tests/api/: test_login.py  test_user.py
tests/core/: test_security.py
tests_helpers/: factories.py
